# llmleaf

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  SOUL.md  docker-bake.hcl  llmleaf.example.toml
.claude/agents/: code-implementer.md  soul-verifier.md
.github/workflows/: ci.yml  release.yml
clients/: .gitignore  Makefile  README.md  SPEC.md  buf.gen.yaml  buf.yaml
clients/csharp/: .gitignore  LICENSE-MIT  Llmleaf.Client.slnx  README.md
clients/csharp/examples/Basic/: Basic.csproj  Program.cs
clients/csharp/scripts/: gen.sh
clients/csharp/src/: ApiException.cs  Enums.cs  Llmleaf.Client.csproj  LlmleafClient.cs  Models.cs
clients/csharp/src/Wire/: ContentPartConverter.cs  Json.cs  Mapper.cs  ResponseContentPartConverter.cs  ResponseItemConverter.cs  StreamReader.cs  WireDtos.cs
clients/csharp/tests/Llmleaf.Client.Tests/: EnumWireTests.cs  Llmleaf.Client.Tests.csproj  ResponsesWireTests.cs  TestServer.cs  WireTests.cs
clients/go/: .gitignore  README.md  audio.go  batches.go  chat.go  client.go  client_test.go  embed_decode.go  embeddings.go  enum.go  go.mod  models.go  rerank.go  responses.go  stream.go  wire.go
clients/go/examples/basic/: main.go
clients/go/examples/responses/: main.go
clients/go/llmleafpb/: llmleaf.pb.go
clients/go/scripts/: gen.sh
clients/kotlin/: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
clients/kotlin/example/: build.gradle.kts
clients/kotlin/example/src/main/kotlin/eu/codefionn/llmleaf/example/: Main.kt
clients/kotlin/scripts/: gen.sh
clients/kotlin/src/commonMain/kotlin/eu/codefionn/llmleaf/client/: ApiError.kt  Config.kt  Engine.kt  LlmleafClient.kt  RawJson.kt  SpeechResult.kt
clients/kotlin/src/commonMain/kotlin/eu/codefionn/llmleaf/client/model/: Audio.kt  Batches.kt  Chat.kt  Common.kt  Content.kt  Embeddings.kt  Enums.kt  Extra.kt  Models.kt  Rerank.kt  Responses.kt  StringOrList.kt  Tools.kt  WireEnums.kt
clients/kotlin/src/commonTest/kotlin/eu/codefionn/llmleaf/client/: ResponsesWireTest.kt  WireTest.kt
clients/kotlin/src/jsMain/kotlin/eu/codefionn/llmleaf/client/: Engine.js.kt
clients/kotlin/src/jvmMain/kotlin/eu/codefionn/llmleaf/client/: Engine.jvm.kt
clients/kotlin/src/linuxX64Main/kotlin/eu/codefionn/llmleaf/client/: Engine.linuxX64.kt
clients/proto/llmleaf/v1/: llmleaf.proto
clients/rust/: Cargo.toml  README.md  build.rs
clients/rust/examples/: basic.rs
clients/rust/scripts/: gen.sh
clients/rust/src/: client.rs  error.rs  lib.rs  pb.rs  stream.rs  types.rs  wire.rs
clients/rust/tests/: responses.rs  wire.rs
clients/typescript/: .gitignore  README.md  package-lock.json  package.json  tsconfig.build.json  tsconfig.json
clients/typescript/examples/: basic.ts
clients/typescript/scripts/: gen.sh
clients/typescript/src/: client.ts  enums.ts  error.ts  index.ts  stream.ts  types.ts  wire.ts
clients/typescript/test/: chat-stream.test.ts  rerank.test.ts  responses.test.ts  wire.test.ts
clients/zig/: README.md  build.zig  build.zig.zon
clients/zig/examples/: basic.zig
clients/zig/scripts/: gen.sh
clients/zig/src/: client.zig  errors.zig  http.zig  root.zig  wire.zig
crates/llmleaf/: Cargo.toml
crates/llmleaf-bench/: Cargo.toml
crates/llmleaf-bench/src/: alloc.rs  cases.rs  harness.rs  lib.rs  main.rs
crates/llmleaf-bench/tests/: ceilings.rs
crates/llmleaf-control/: Cargo.toml
crates/llmleaf-control/src/: intercept.rs  lib.rs  oauth.rs  refresh.rs  usage.rs
crates/llmleaf-core/: Cargo.toml
crates/llmleaf-core/src/: admin.rs  batch_id.rs  config.rs  engine.rs  events.rs  keys.rs  lib.rs  oauth.rs  ratelimit.rs  route.rs  server.rs
crates/llmleaf-core/src/compat/: anthropic.rs  batch.rs  embeddings.rs  mod.rs  openai.rs  openapi.rs  rerank.rs  responses.rs  speech.rs  transcription.rs
crates/llmleaf-core/src/compat/realtime/: mod.rs  session.rs  wire.rs
crates/llmleaf-core/tests/: batch_e2e.rs  e2e.rs  realtime_ws.rs
crates/llmleaf-model/: Cargo.toml
crates/llmleaf-model/src/: audio.rs  batch.rs  catalog.rs  embed.rs  error.rs  lib.rs  request.rs  rerank.rs  response.rs  stream.rs
crates/llmleaf-pricing/: Cargo.toml
crates/llmleaf-pricing/data/: prices.json
crates/llmleaf-pricing/src/: lib.rs
crates/llmleaf-provider/: Cargo.toml
crates/llmleaf-provider/src/: lib.rs
crates/llmleaf-providers/: Cargo.toml
crates/llmleaf-providers/src/: anthropic.rs  batch.rs  cohere.rs  compat.rs  fake.rs  gemini.rs  http.rs  lib.rs  lmstudio.rs  mock.rs  moonshot.rs  ollama.rs  openai_responses_wire.rs  openai_wire.rs  realtime_ws.rs  roundtrip.rs  thinking.rs  transport.rs  vertex.rs
crates/llmleaf-simulation/: Cargo.toml
crates/llmleaf-simulation/src/: admin.rs  collect.rs  dispatch.rs  engine.rs  keys.rs  lib.rs  main.rs  provider.rs  rng.rs
crates/llmleaf-simulation/tests/: sweep.rs
crates/llmleaf-web/: Cargo.toml  README.md  llmleaf-web.example.toml
crates/llmleaf-web/migrations/: 0001_init.sql
crates/llmleaf-web/src/: admin.rs  app.rs  config.rs  dto.rs  lib.rs  limiter.rs  main.rs  state.rs  wire.rs
crates/llmleaf-web/src/app/: pages.rs  server.rs
crates/llmleaf-web/src/auth/: mod.rs  oidc.rs  password.rs
crates/llmleaf-web/src/control/: mod.rs
crates/llmleaf-web/src/db/: keys.rs  mod.rs  session.rs  usage.rs
crates/llmleaf-web/style/: main.css
crates/llmleaf/examples/: batch.rs  chat.rs  embed.rs  list-models.rs  probe.rs  rerank.rs  stt.rs  tts.rs  voices.rs
crates/llmleaf/examples/common/: mod.rs
crates/llmleaf/src/: main.rs
e2e-tests/: .env.example  .gitignore  README.md  docker-compose.yml  llmleaf.e2e.toml  probe-suite.sh  run.sh
