[package]
name = "llmleaf-bench"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "llmleaf micro-benchmark harness — measures wall-clock time and heap allocations of the core hot-path loops and components. A QA tool; never a dependency of a production crate."

# The benchmark runner: `cargo run -p llmleaf-bench --release`.
[[bin]]
name = "llmleaf-bench"
path = "src/main.rs"

[dependencies]
llmleaf-model.workspace = true
llmleaf-provider.workspace = true
llmleaf-providers = { workspace = true, features = ["test-support"] }
llmleaf-core.workspace = true
llmleaf-pricing.workspace = true

async-trait.workspace = true
bytes.workspace = true
futures.workspace = true
serde_json.workspace = true
