[package]
name = "llmleaf-provider"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "llmleaf extension boundary — the Provider trait and registry"

[dependencies]
llmleaf-model.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
# Realtime transport peer: an mpsc duplex of opaque frames (`tokio::sync::mpsc`).
tokio.workspace = true
bytes.workspace = true
